# terminal_size

./: .gitignore  .travis.yml  CHANGES.md  README.md  _tags  dune-project  myocamlbuild.ml  opam  terminal_size.opam
.github/workflows/: main.yml
doc/: Terminal_size.html  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Terminal_size.html
doc/terminal_size/: index.html
doc/terminal_size/Terminal_size/: index.html
pkg/: META  pkg.ml
src/: dune  terminal_size.mli  terminal_size_stubs.c
test/: dune  mock_ioctl.c  mock_ioctl_linux.c  testsuite.ml
