opam-version: "2.0"
maintainer: "Cryptosense <opensource@cryptosense.com>"
authors: [
    "Cryptosense <opensource@cryptosense.com>"
    "Etienne Millon <etienne@cryptosense.com>"
]
homepage: "https://github.com/cryptosense/terminal_size"
bug-reports: "https://github.com/cryptosense/terminal_size/issues"
license: "BSD-2-Clause"
dev-repo: "git+https://github.com/cryptosense/terminal_size.git"
doc: "https://cryptosense.github.io/terminal_size/doc"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "alcotest" {with-test}
  "dune" {>= "2.0.0"}
  "ocaml" {>= "4.08.0"}
]
synopsis: "Get the dimensions of the terminal"
description: """
You can use this small library to detect the dimensions of the terminal window
attached to a process.
"""
